[gd_scene load_steps=16 format=2]

[ext_resource path="res://assests/sprites/bg/631.jpg" type="Texture" id=1]
[ext_resource path="res://assests/sara_a.png" type="Texture" id=2]
[ext_resource path="res://Fonts/TH-Chara ver 2.00.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assests/owl.png" type="Texture" id=4]
[ext_resource path="res://assests/volume.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Area2D.gd" type="Script" id=6]
[ext_resource path="res://script/Sara.gd" type="Script" id=7]
[ext_resource path="res://Fonts/CSPraJad-bold.otf" type="DynamicFontData" id=8]
[ext_resource path="res://learn_กอ/next_button.png" type="Texture" id=9]
[ext_resource path="res://sara/sara.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 250
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 160 )

[sub_resource type="Animation" id=3]
resource_name = "Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/pic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 184, 440 ), Vector2( 184, 440 ), Vector2( 184, 440 ), Vector2( 184, 440 ), Vector2( 184, 440 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/pic:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.31339, 4.6472, 10.4223, 3.01694 ]
}

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="CircleShape2D" id=5]

[node name="SaraScene" type="Node2D"]
script = ExtResource( 7 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 515.809, 328.153 )
scale = Vector2( 0.210454, 0.246863 )
texture = ExtResource( 1 )

[node name="topic" type="Sprite" parent="."]
position = Vector2( 528, 456 )
scale = Vector2( 0.221589, 0.221589 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 408.0
margin_top = 96.0
margin_right = 672.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-ะ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 184, 440 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Anim = SubResource( 3 )

[node name="pic" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 184, 440 )
scale = Vector2( 0.305589, 0.305589 )
texture = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 8, -32 )
scale = Vector2( 1.16912, 1.26023 )
color = Color( 0.14902, 0.14902, 0.137255, 1 )
polygon = PoolVector2Array( 136, 80, 136, 104, 160, 80, 384, 80, 384, 40, 104, 40, 104, 80 )

[node name="RichTextLabel" type="RichTextLabel" parent="Polygon2D"]
margin_left = 113.761
margin_top = 42.8493
margin_right = 413.761
margin_bottom = 142.85
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Polygon2D"]
wait_time = 0.08
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 128, 168 )
script = ExtResource( 6 )

[node name="SoundButt" type="Sprite" parent="Area2D"]
scale = Vector2( 0.133083, 0.133083 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 3.51106, 3.51106 )
shape = SubResource( 5 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource( 10 )
volume_db = 2.516

[node name="NextButton" type="TextureButton" parent="."]
margin_left = 768.0
margin_top = 536.0
margin_right = 1126.0
margin_bottom = 633.0
rect_scale = Vector2( 0.563704, 0.563704 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="timeout" from="Polygon2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
